--- a/week05/styles.css
+++ b/week05/styles.css
@@ -1,8 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Lora&family=Poppins:wght@300&family=Raleway&family=Space+Grotesk:wght@300&display=swap");
+:root {
+	--font-heading: "Poppins", sans-serif;
+	--font-paragrahp: "Raleway", sans-serif;
+}
+
 body {
 	margin: 0;
 	padding: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 img {
@@ -19,16 +23,23 @@ li {
 }
 
 h1 {
+	font-family: var(--font-heading);
 	text-align: center;
+	text-decoration: underline;
 	/* background-color: lightgray; */
 	padding: 25px;
+}
+
+h2,
+h3 {
+	font-family: var(--font-heading);
 }
 
 h2 {
 	grid-area: header;
 	text-align: center;
-	background-color: #395b50;
-	color: #ced0ce;
+	background-color: #303841;
+	color: #eeeaeb;
 	padding: 15px;
 }
 
@@ -45,4 +56,8 @@ img {
 	justify-self: center;
 	width: 80%;
 	height: auto;
+}
+
+p {
+	font-family: var(--font-paragrahp);
 }
