--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -5,6 +5,8 @@
 	--backgrounColor: #f5f6f7;
 	--colorStuff: #1b1b32;
 	--fontSize: 62.5%;
+	--correct: #28a745;
+	--incorrect: #dc3545;
 }
 
 * {
@@ -21,6 +23,8 @@ h1 {
 	font-size: 5.4rem;
 	margin: 0 0 5rem 0;
 	color: var(--colorStuff);
+	padding-top: 8rem;
+	margin-top: 10rem;
 }
 
 h2 {
@@ -45,7 +49,7 @@ main .home {
 	flex-direction: column;
 }
 
-main .home .btn {
+.btn {
 	text-align: center;
 	font-size: 1.8rem;
 	padding: 1rem 0;
@@ -56,6 +60,12 @@ main .home .btn {
 	background-color: var(--backgrounColor);
 	color: var(--colorStuff);
 	font-family: var(--main-font);
+	transition: 1.1s 0s ease;
+}
+
+.btn:hover {
+	background-color: var(--colorStuff);
+	color: white;
 }
 
 /* Play page styles section*/
@@ -63,9 +73,10 @@ main .home .btn {
 .choice-container {
 	display: flex;
 	margin-bottom: 0.5rem;
-	width: 100%;
+	width: 80%;
 	border: 0.1rem solid var(--colorStuff);
 	background-color: white;
+	cursor: pointer;
 }
 
 .choice-prefix {
@@ -82,4 +93,73 @@ main .home .btn {
 	font-weight: 600;
 	margin: auto 0;
 	padding: 0 0 0 1rem;
+}
+
+.correct {
+	background-color: var(--correct);
+}
+
+.incorrect {
+	background-color: var(--incorrect);
+}
+
+/*HUD*/
+
+#hud {
+	display: flex;
+	justify-content: space-around;
+}
+
+.hud-prefix {
+	text-align: center;
+	font-size: 2rem;
+	font-family: var(--main-font);
+	font-weight: bold;
+	margin: 0 0 5px 0;
+}
+
+.hud-main-text {
+	text-align: center;
+}
+
+#progressBar {
+	width: 16rem;
+	height: 4rem;
+	border: 0.2rem solid var(--colorStuff);
+}
+
+#progressBarFull {
+	height: 3.4rem;
+	background-color: var(--colorStuff);
+	width: 0;
+}
+
+/*Styles Score Page*/
+
+section.container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+/*FORMS*/
+form {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+input {
+	margin: 0 0 1rem 0;
+	font-family: var(--main-font);
+	width: 20rem;
+	padding: 1.5rem;
+	font-size: 1.8rem;
+	border: none;
+	box-shadow: 0 0.1rem 1.4rem 0 var(--colorStuff);
+}
+
+input::placeholder {
+	color: var(--colorStuff);
 }
